# GrabberFramework

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
collectors/: abuse.py  collector.py  ha.py  vx.py  yarify.py
config/: extractor.py  processor.py  regex.py  sample.py
config/extractors/: LeprechaunVNC.py  MysticStealer.py  SmokeLoader.py  ValleyRAT64.py  XWorm.py  YoungLotus.py  lzsa.asm  njrat.py
db/: db.py
debug/: debugger.py
download/: abuse.py  downloader.py  ha.py  vx.py  yarify.py
logs/: logger.py
mimic/: mimic.py
sample/: sample.py
sandbox/: ha.py  sandbox.py  vx.py
scanners/: config.py  scanner.py  urls.py  virustotal.py  yara.py
